# Relevance_YaMaps

./: .gitignore  README.md  basic_config.json  pyproject.toml  requirements.txt  results.jsonl
docker/: Dockerfile
notebooks/: 1_baseline.ipynb  2_llm_agent.ipynb  3_agent.ipynb
org_relevance/: config.py  logging.py
org_relevance/agent/: graph.py  nodes.py  utils.py
org_relevance/common/: types.py
org_relevance/evaluation/: evaluate.py
org_relevance/pipelines/: run_single.py
org_relevance/prompts/: all_promtps.py
org_relevance/web/: providers.py  retrieve.py
src/app/: ui.py
src/evaluation/: metrics.py
src/org_relevance/pipelines/: run_single.py
streamlit_app/: app.py
streamlit_app/pages/: Batch_Run.py  Single_Query.py
